# url_shortner_app

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
entity/: Cargo.toml
entity/src/: mod.rs  prelude.rs  stats.rs  urls.rs
migration/src/: lib.rs  m20220101_000001_create_urls_table.rs  m20230506_113150_create_stats_table.rs
src/: data.rs  handler.rs  main.rs  model.rs
